5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1838_2603.log
== SUBMITION (2019-06-26 12:34:43) 
-- CODE:
from numpy import*

j=array(eval(input("q?")))

for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]=m[i,j]
	v=sorted(v,reverse=True)
	k=0
	for i in range(4):
		m[i,j]=v[k]
		k+=1
print(m)
-- EXECUTION TIME:
1.38193
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/2603/main.py", line 9, in <module>
    v[k]=m[i,j]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:35:03) 
-- CODE:
from numpy import*

j=array(eval(input("q?")))

for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]=m[i,j]
	v=sorted(v,reverse=True)
	k=0
	for i in range(4):
		m[i,j]=v[k]
		k+=1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:35:23) 
-- CODE:
from numpy import*

j=array(eval(input("q?")))

for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]=j[i,j]
	v=sorted(v,reverse=True)
	k=0
	for i in range(4):
		j[i,j]=v[k]
		k+=1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:37:51) 
-- CODE:
from numpy import*

j=array(eval(input("q?")))

for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]=j[i,j]
	v=sorted(v,reverse=True)
	k=0
	for i in range(4):
		j[i,j]=v[k]
		k+=1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:38:34) 
-- CODE:
from numpy import*

n=array(eval(input("q?")))

for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]=n[i,j]
	v=sorted(v,reverse=True)
	k=0
	for i in range(4):
		n[i,j]=v[k]
		k+=1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:38:45) 
-- CODE:
from numpy import*

n=array(eval(input("q?")))

for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]=n[i,j]
	v=sorted(v,reverse=True)
	k=0
	for i in range(4):
		n[i,j]=v[k]
		k+=1
print(n)
-- EXECUTION TIME:
0.960548
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [0 0 0 0]
 [0 0 0 0]
 [0 0 0 0]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 4 4 3]
 [0 0 0 0]
 [0 0 0 0]
 [0 0 0 0]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:38:48) 
-- CODE:
from numpy import*

n=array(eval(input("q?")))

for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]=n[i,j]
	v=sorted(v,reverse=True)
	k=0
	for i in range(4):
		n[i,j]=v[k]
		k+=1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:39:29) 
-- CODE:
from numpy import*

n=array(eval(input("q?")))

for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]=n[i,j]
		k+=1
	v=sorted(v,reverse=True)
	k=0
	for i in range(4):
		n[i,j]=v[k]
		k+=1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:39:32) 
-- CODE:
from numpy import*

n=array(eval(input("q?")))

for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]=n[i,j]
		k+=1
	v=sorted(v,reverse=True)
	k=0
	for i in range(4):
		n[i,j]=v[k]
		k+=1
print(n)
-- EXECUTION TIME:
1.11858
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
